clusters/wrtk8s/metube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metube
  namespace: metube
spec:
  selector:
    app: metube
  ports:
    - port: 80
      targetPort: 8081
      name: http
